second commit by user

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
     </form>
     </div>
     <p class="f">Forgot password...?<a href="r1pass.html"> reset it</a></p>
-   <a href="air.html"><div class="but"><input type="button" value="Back" class="back"></div></a>  
+   <a href="index.html"><div class="but"><input type="button" value="Back" class="back"></div></a>  
 <!-- </div> -->
     </div>
     
