--- a/setting.html
+++ b/setting.html
@@ -23,7 +23,7 @@
         <button class="b1"></button><a href="cpass.html"><button class="but1">Change Password</button></a><br>
         <button class="b2"></button><a href="rpass.html"><button class="but2">Reset Password</button></a>
         </div>
-        <a href="air.html"><button class="log">Logout</button></a>
+        <a href="index.html"><button class="log">Logout</button></a>
     <!-- </div> -->
 </body>
 </html>
