last one commit

--- a/booking2.html
+++ b/booking2.html
@@ -11,7 +11,7 @@
     <a href="user.html"><p class="para"><span class="h">HOME</span></p></a>
     <div class="par2"><a href="setting.html"><p class="para2"><span class="s">SETTINGS</span></p></a></div><br>
     <div id="buttons">
-        <button class="but2"  value="isj"><span class="s1">2AH3</span><span class="s2">Indigo</span><span class="s3">Chennai</span><span class="s4">Mumbai</span><span class="s5">20/08/2025</span><span class="s6">$299</span><span class="s7">18</span></button>
+        <!-- <button class="but2"  value="isj"><span class="s1">2AH3</span><span class="s2">Indigo</span><span class="s3">Chennai</span><span class="s4">Mumbai</span><span class="s5">20/08/2025</span><span class="s6">$299</span><span class="s7">18</span></button> -->
         </div>
         <div class="all">
    <label class="l1">No.Of.Adult :</label><br>
@@ -24,7 +24,7 @@
    <label class="total" id="total">Total Amount :</label>
    <div id="total1" class="total2"></div>
 </div>
-  <button class="book">Book Tickets</button>
+  <button class="book" id="book">Book Tickets</button>
 </div>
    <script src="booking2.js"></script>
    
