--- a/user.html
+++ b/user.html
@@ -8,13 +8,14 @@
 </head>
 <body class="body">
     <div class="aa1">
-    <button type="button" class="b"><div class="round">X</div><div class="n">User Name</div> </button>
+    <button type="button" class="b"><div class="round">X</div><div class="n" id="name"></div> </button>
     <p class="para"><span class="h">HOME</span></p><a href="setting.html"><p class="para2"><span class="s">SETTINGS</span></p></a><br>
     <div class="a">
     <button  class="bb1"> </button><a href="booking.html"><button class="b1">Booking</button></a><br>
     <button  class="bb2"> </button><a href="ticket.html"><button class="b2">Tickets</button></a><br>
     <button  class="bb3"> </button><button class="b3">Booking History</button>
     </div>
+    <script src="user.js"></script>
     <!-- <button  class="bb4"> </button><button class="b4"></button> -->
 </body>
 </html>
